extend the index file, wrapped the code into try catch, fixe styling structure

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_productTiles.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_productTiles.scss
@@ -360,8 +360,8 @@
             cursor: pointer;
         
             img {
-                border: 1px solid #ffff;
-                padding: 1px;
+                border: rem(1) solid $white;
+                padding: rem(1);
                 
                 &.swatch-circle.is-active {
                     border: rem(1) solid $black;
